--- a/.codenvy/project.json
+++ b/.codenvy/project.json
@@ -1,1 +1,1 @@
-{"attributes":{"framework":["javaStandaloneApp"]},"projectTypeId":"maven","builder":"maven","runner":null,"defaultBuilderEnvironment":null,"defaultRunnerEnvironment":null,"builderEnvironmentConfigurations":{},"runnerEnvironmentConfigurations":{},"description":null}
+{"type":"maven","attributes":{},"builders":{"default":"maven"},"runners":{"configs":{}}}
