update templates to latest project.json

--- a/.codenvy/project.json
+++ b/.codenvy/project.json
@@ -1,1 +1,1 @@
-{"type":"maven","attributes":{},"builders":{"default":"maven"},"runners":{"configs":{}}}
+{"type":"maven","attributes":{},"runners":{"default":"system://default","configs":{}},"builders":{"default":"maven"}}
