update templates according to changes in runner hierarchy

--- a/.codenvy/project.json
+++ b/.codenvy/project.json
@@ -1,1 +1,1 @@
-{"type":"maven","attributes":{},"runners":{"default":"system://default","configs":{}},"builders":{"default":"maven"}}
+{"type":"maven","attributes":{},"runners":{"configs":{}},"builders":{"default":"maven"}}
